# 3d-game-engine

./: .gitignore  CMakeLists.txt  main.cpp
includes/: clipping.h  engine.h  math_utils.h  mesh.h  texturing.h  types.h
src/: clipping.cpp  engine.cpp  math_utils.cpp  mesh.cpp  texturing.cpp
